[project]
name = "awtube"
version = "0.1.0"
authors = [
  { name="Armando Selvija", email="selvija@automationware.it" },
]

maintainers = [
  { name="Armando Selvija", email="selvija@automationware.it" },
]

description = "Package driver for AWTube robot arm."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"